[package]
name = "palmietopia-server"
version = "0.1.0"
edition = "2024"

[dependencies]
palmietopia-core = { path = "../palmietopia-core" }

axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
